# interview-kit

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  PRODUCTION_ARCHITECTURE.md  README.md  USER_STORIES.md  app.py  auth.py  db.py  docker-compose.yml  models.py  parsing.py  pyproject.toml  repository.py  requirements.txt  session_token.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
alembic/: env.py
alembic/versions/: e1c77e37a2f1_initial_schema_users_kits_scorecards_.py
samples/: README.md  sample_jd.txt  sample_resume.txt
tests/: test_auth.py  test_parsing.py  test_repository_integration.py
